--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,13 @@ $RECYCLE.BIN/
 .project
 .settings
 
+# Survey.js specific ignores
+surveyjs/*/.git
+surveyjs/*/.git_output
+surveyjs/*/build
+surveyjs/*/node_modules
+surveyjs/*/dist
+surveyjs/*/*.tgz
+surveyjs/*/*.vsix
+surveyjs/*/package-lock.json
+
