--- a/cumulusci.yml
+++ b/cumulusci.yml
@@ -1,14 +1,14 @@
-minimum_cumulusci_version: '3.78.0'
+minimum_cumulusci_version: "3.78.0"
 project:
     name: SurveySF
     package:
         name: SurveySF
-        api_version: '61.0'
+        api_version: "61.0"
     git:
-        default_branch: 'main'
-        prefix_feature: 'feature/'
-        prefix_beta: 'beta/'
-        prefix_release: 'release/'
+        default_branch: "main"
+        prefix_feature: "feature/"
+        prefix_beta: "beta/"
+        prefix_release: "release/"
     source_format: sfdx
 
 tasks:
@@ -26,3 +26,23 @@ tasks:
     run_tests:
         options:
             required_org_code_coverage_percent: 75
+
+    ###  Assign Permission Set Group  ################################
+    assign_unpackaged_permission_set_groups:
+        class_path: cumulusci.tasks.salesforce.users.permsets.AssignPermissionSetGroups
+        options:
+            api_names: SurveyAdmin
+
+flows:
+    config_dev:
+        steps:
+            3.1:
+                task: assign_unpackaged_permission_set_groups
+    config_managed:
+        steps:
+            3:
+                task: assign_unpackaged_permission_set_groups
+    config_qa:
+        steps:
+            3.1:
+                task: assign_unpackaged_permission_set_groups
